# NIaC

./: .gitignore  .sops.yaml  Cargo.toml  LICENSE.md  flake.nix  rust-toolchain.toml  taplo.toml
configurations/hosts/: flakeMod.nix
configurations/hosts/jetstream/: configuration.nix
configurations/hosts/jetstream/hardware/: disks.nix
crates/lib/error/: Cargo.toml
crates/lib/error/src/: lib.rs  panic.rs
crates/lib/log/: Cargo.toml
crates/lib/log/src/: format.rs  lib.rs  timer.rs  visitor.rs
helpers/: default.nix  disks.nix  pyproject.toml
helpers/bootstrap/: .gitignore  Cargo.toml  README.md  __init__.py  cli.py  decrypt.py  package.nix
helpers/bootstrap/decrypt/: masterKeys.py  sopsKeys.py
helpers/bootstrap/src/: main.rs  sigint.rs
helpers/bootstrap/src/decrypt/: mod.rs  rops.rs  sequoia.rs
helpers/bootstrap/src/error/: mod.rs  panic.rs
helpers/bootstrap/src/log/: format.rs  mod.rs  timer.rs  visitor.rs
helpers/bootstrap_py/: __init__.py  decrypt.py  package.nix
modules/system/: flakeMod.nix
modules/system/boot/: loader.nix
secrets/hosts/jetstream/: masterKey.asc  masterKey.gpg
secrets/hosts/jetstream/secureBootKeys/: GUID.age
secrets/hosts/jetstream/secureBootKeys/KEK/: key.age  pem.age
secrets/hosts/jetstream/secureBootKeys/PK/: key.age  pem.age
secrets/hosts/jetstream/secureBootKeys/db/: key.age  pem.age
secrets/users/Sk7Str1p3/: masterKey.asc  masterKey.gpg
secrets/users/root/: masterKey.asc  masterKey.gpg
shells/: self.nix
