[workspace]
    members  = [ "crates/lib/error", "crates/lib/log", "helpers/bootstrap" ]
    resolver = "3"

    [workspace.package]
        authors     = [ "Sk7Str1p3" ]
        description = "Crates used in NIaC"
        edition     = "2024"
        license     = "MIT"
        version     = "0.1.0"
    [workspace.dependencies]
        color-eyre = "0.6.5"
        niac_error = { path = "crates/lib/error" }
        niac_log   = { path = "crates/lib/log" }
        owo-colors = "4.2.3"
        tracing    = "0.1.41"

[profile.release]
    incremental     = true
    lto             = "fat"
    overflow-checks = true
    strip           = true
