[package]
name = "NIaC_bootstrap"
version = "0.1.0"
authors = ["Sk7Str1p3"]
edition = "2024"
description = "Bootstrap script for NIaC dotfiles to automate installation"
license = "MIT"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[profile.release]
strip = true
incremental = true
overflow-checks = true
lto = "fat"

[dependencies]
chrono = "0.4.42"
colored = "3.0.0"
ctrlc = "3.5.0"
dialoguer = "0.12.0"
rops = "0.1.5"
serde_json = "1.0.145"
sequoia-openpgp = { version = "2.0.0", features = [
    "crypto-rust",
    "allow-experimental-crypto",
    "allow-variable-time-crypto",
    "compression",
], default-features = false }
tempdir = "0.3.7"
tracing = "0.1.41"
# pin to 0.3.19 until #3369 is resolved
tracing-subscriber = "=0.3.19"
anyhow = "1.0.100"
